--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="GraphQL To Do"
-      content="To Do app created with React and GraphQL"
+      name="Bulletin Bored"
+      content="Public bulletin board created with React and GraphQL"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GraphQL To Do</title>
+    <title>Bulletin Bored</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
